2004-02-11  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* popup.c

	More tidying up

	* cong-util.c, cong-util.h, popup.c

	Tidy up of the popup menu code

	* cong-node.c, cong-node.h, cong-util.c, cong-util.h, global.h, popup.c, xmldata.c

	Replaced the string_selection_dialog with cong_util_modal_element_selection_dialog and a system for identifying potential elements that can support namespaces

2004-02-10  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-document.c, cong-file-export.c, cong-file-print.c, cong-node-properties-dialog.c, xmledit.c

	Removing redundant usage of CongDispspec

2004-02-07  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* plugin-fo.c

	Use namespace URI rather than looking for fo prefix when determining if a document is an XSL-FO file.

	* cong-document.c, plugin-dtd.c

	Sorted out namespaces in the DTD->RELAX NG importer

	* cong-dispspec-element-gxx.h, cong-dispspec-element.c, cong-dispspec-element.h, cong-dispspec-registry.c, cong-dispspec.c, cong-dispspec.h, cong-document.c, cong-document.h, cong-dom-view.c, cong-node-properties-dialog.c, cong-node.c, cong-node.h, cong-overview-view.c, cong-tree-view.c, cong-util.c, cong-util.h, cursor.c, plugin-docbook.c, plugin-dtd.c, plugin-fo.c, plugin-lists-node-element-listitem.c, plugin-random.c, plugin-website.c, popup.c, xmldata.c

	Big fix of namespace handling (use URIs rather than prefixes)

2004-02-06  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-plugin-manager.h, cong-plugin.c, cong-plugin.h

	Reimplementation of internals of CongPlugin: now uses GType when searching for services of a particular type, rather than hardcoding each individual type

2004-02-05  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-dispspec-registry.c, cong-dispspec.c, cong-dispspec.h

	When determining which dispspec to use, calculate coverage of the document elements and pick the best (above a certain threshold percentage)

2004-02-04  Dave Malcolm  <david@davemalcolm.demon.co.uk>
